# scotty

./: .gitignore  .travis.yml  ChangeLog  Makefile  Makefile.in  PORTS  README  README.FreeBSD  README.NetBSD  README.NetBSD.md  README.flightaware  README.md  README.minix  TODO  VERSIONS.md  bootstrap  config.h.in  configure.ac  tki.patch  tkined.defaults  tnm.patch
.github/workflows/: codeql.yml  scotty.yml
compat/: ether_clnt.c  ether_xdr.c  mount_clnt.c  mount_xdr.c  pcnfsd.h  pcnfsd_clnt.c  pcnfsd_xdr.c  rstat.h  rstat_clnt.c  rstat_xdr.c
compat/rpc/: rpc.h
doc/: TnmDialog.n  TnmIetf.n  TnmSnmp.n  dns.n  nmicmpd.8  tkined.1
tclconfig/: tcl.m4
tki/apps/: library.tcl  locations  snmp_scriptmib.tcl
tki/bitmaps/: Box.xbm  DEC-Server.xbm  HP.xbm  HPMask.xbm  HPsjMask.xbm  IPC.xbm  NFS-server.xbm  SparcStation.xbm  bigBoxMask.xbm  bone.xbm  bus.xbm  hyper.xbm  ined.xbm  lockerMask.xbm  mx.xbm  nodeMask.xbm  pc.xbm  pointer.xbm  smallBox.xbm  switch.xbm  textMask.xbm  tkined.xbm  unixpc.xbm  unixpcMask.xbm
tki/generic/: tkiMethods.c  tkiPort.h
tkined/: .gitignore  ChangeLog  Makefile.in  TODO  aclocal.m4  changes  config.h.in  configure.ac  license.terms
tkined/apps/: changes  clock.tcl  game.tcl  germany-map.xbm  ip_discover.tcl  ip_layout.tcl  ip_monitor.tcl  ip_trouble.tcl  ip_world.tcl  library.tcl  manager.tcl  movie.tcl  netherlands-map.xbm  snmp_browser.tcl  snmp_hp.tcl  snmp_monitor.tcl  snmp_ucd.tcl  tclIndex  usa-map.xbm  world-map.xbm
tkined/bitmaps/: BoxMask.xbm  DEC-ServerMask.xbm  DEC.xbm  DECMask.xbm  HP7550.xbm  HPdj.xbm  HPsj.xbm  IPCMask.xbm  NFS-client.xbm  NFS-clientMask.xbm  NFS-serverMask.xbm  RS6000Mask.xbm  SLC.xbm  SLCMask.xbm  SUN-Server.xbm  SUN3.xbm  SUN3Mask.xbm  SparcStationMask.xbm  Xstation.xbm  XstationMask.xbm  action.xbm  backbone.xbm  backboneMask.xbm  bigBox.xbm  boneMask.xbm  bridge.xbm  bridgeMask.xbm  busMask.xbm  ciscoMask.xbm  clock.xbm  clockMask.xbm  concent.xbm  concentMask.xbm  connector.xbm  connectorMask.xbm  (+46 more)
tnm/: .gitignore  Makefile.in  README.flightaware  TODO  aclocal.m4  configure.ac  configure.scan  scotty.in  tclscotty
tnm/agents/: README  snmpd  snmpd-proc.tcl  snmpd-tnm.tcl
tnm/compat/: ether.h  ether_xdr.c  mount.h  mount_xdr.c  pcnfsd_xdr.c  resolv.h  rstat_clnt.c
tnm/compat/arpa/: nameser.h
tnm/compat/rpc/: types.h
tnm/compat/sys/: bitypes.h  cdefs.h
tnm/doc/: Tnm.n  Tnm.n.in  TnmEther.n.in  TnmInet.n.in  TnmMib.n  dns.n.in  icmp.n  icmp.n.in  job.n  map.n.in  mib.n.in  netdb.n.in  nmtrapd.8  ntp.n.in  scotty.1  smx.n  snmp.n.in  sunrpc.n.in  syslog.n.in  udp.n.in
tnm/doc/examples/: init.tcl
tnm/examples/: README  discover  discover.n  emok  emok.n  etherload.n  ifload2gif  ifload2gif.n  mibgrep.n  mibtree  mibtree.n  nslook  nslook.n  rpcprobe  rpcprobe.n  rstat  sbrowser.cgi  snmptrapd  snmpwalk.n  tcpspeed.n  traceroute  traceroute.n  udploss  udpspeed  uiping.n  yanny
tnm/generic/: ether.x  pcnfsd.x  tnm.h  tnmDns.c  tnmIcmp.c  tnmIned.c  tnmInit.c  tnmInt.h  tnmJob.c  tnmMap.c  tnmMap.h  tnmMapEvent.c  tnmMapGroup.c  tnmMapLink.c  tnmMapNet.c  tnmMapNode.c  tnmMapPort.c  tnmMapUtil.c  tnmNetdb.c  tnmNtp.c  tnmObj.c  tnmPort.h  tnmSmx.c  tnmSunRpc.c  tnmSyslog.c  tnmUdp.c  tnmUtil.c
tnm/mibs/: ACCOUNTING-CONTROL-MIB  ADSL-LINE-MIB  APPC-MIB  APPLETALK-MIB  APPLICATION-MIB  APPN-DLUR-MIB  ATM-ACCOUNTING-INFORMATION-MIB  ATM-TC-MIB  BGP4-MIB  CHARACTER-MIB  CLNS-MIB  DIRECTORY-SERVER-MIB  DISMAN-SCHEDULE-MIB  DISMAN-SCRIPT-MIB  DLSW-MIB  DNS-RESOLVER-MIB  DNS-SERVER-MIB  DOCS-CABLE-DEVICE-MIB  DOCS-IF-MIB  DOT12-IF-MIB  DOT12-RPTR-MIB  DS0BUNDLE-MIB  DS1-MIB  DS3-MIB  EBN-MIB  EtherLike-MIB  FDDI-SMT73-MIB  HPR-MIB  IANA-ADDRESS-FAMILY-NUMBERS-MIB  INET-ADDRESS-MIB  INTEGRATED-SERVICES-GUARANTEED-MIB  INTEGRATED-SERVICES-MIB  IP-FORWARD-MIB  IP-MIB  IPATM-IPMC-MIB  IPV6-ICMP-MIB  IPV6-MIB  Job-Monitoring-MIB  MAU-MIB  MIOX25-MIB  (+47 more)
tnm/snmp/: tnmAsn1.c  tnmAsn1.h  tnmMD5.c  tnmMD5.h  tnmMib.h  tnmMibFrozen.c  tnmMibParser.c  tnmMibTcl.c  tnmMibTree.c  tnmMibUtil.c  tnmOidObj.c  tnmSHA.c  tnmSHA.h  tnmSmiTcl.c  tnmSnmp.h  tnmSnmpAgent.c  tnmSnmpInst.c  tnmSnmpNet.c  tnmSnmpRecv.c  tnmSnmpSend.c  tnmSnmpTcl.c  tnmSnmpUsm.c  tnmSnmpUtil.c
tnm/tclconfig/: .gitignore  tcl.m4
tnm/tests/: README  all.tcl  dns.test  dns.test~  icmp.test  l.smx.test  map.test  mib.test  netdb.test  ntp.test  smx.test  snmp.test  sunrpc.test  udp.test
tnm/tnm/: changes
tnm/tnm/agents/: snmpd-nfs.tcl
tnm/tnm/examples/: bridge  bridge.n  etherload  ifload  ifload.n  mibgrep  pcnfs  pcnfs.n  rstat.n  snmptrapd.n  snmpwalk  tcpspeed  udploss.n  udpspeed.n  uiping  yanny.n
tnm/tnm/generic/: tnmDns.c  tnmInt.h  tnmJob.c  tnmMapLink.c  tnmMapPort.c  tnmMapUtil.c  tnmPort.h  tnmSyslog.c
tnm/tnm/mibs/: ADSL-TC-MIB  APPN-MIB  APPN-TRAP-MIB  DECNET-PHIV-MIB  DIAL-CONTROL-MIB  DS0-MIB  DSA-MIB  ETHER-CHIPSET-MIB  FLOW-METER-MIB  FRAME-RELAY-DTE-MIB  HPR-IP-MIB  IANA-LANGUAGE-MIB  IANATn3270eTC-MIB  IPOA-MIB  IPV6-TC  IPV6-TCP-MIB  IPV6-UDP-MIB  ISDN-MIB  MIP-MIB  MTA-MIB  Modem-MIB  PARALLEL-MIB  PPP-IP-NCP-MIB  RADIUS-ACC-CLIENT-MIB  RFC1269-MIB  RFC1381-MIB  RFC1414-MIB  SNA-NAU-MIB  SNMPv2-CONF  TCP-MIB  TN3270E-RT-MIB  TUBS-IBR-LINUX-MIB  TUNNEL-MIB
tnm/tnm/snmp/: tnmMibUtil.c  tnmOidObj.c  tnmSHA.c  tnmSnmp.h  tnmSnmpUsm.c
tnm/tnm/tests/: job.test  netdb.test  syslog.test
tnm/unix/: config.h.in  configure.in  nmicmpd.c  nmtrapd.c  porting.notes  scotty.c  tkiUnixPort.h  tnmUnixIcmp.c  tnmUnixInit.c  tnmUnixLog.c  tnmUnixPort.h  tnmUnixSnmp.c  tnmUnixSocket.c
tnm/win/: makefile  tnmWinInit.c  tnmWinPort.h  tnmWinSocket.c
unix/: Makefile  Makefile.in  README.FreeBSD  config.h  config.status  configure  configure.in  ether.h  ether_clnt.c  ether_xdr.c  mount.h  mount_clnt.c  mount_xdr.c  nmicmpd.c  nmtrapd.c  pcnfsd.h  pcnfsd_clnt.c  pcnfsd_xdr.c  rstat.h  rstat_clnt.c  rstat_xdr.c  scotty.c  tkiUnixInit.c  tnmUnixIcmp.c  tnmUnixInit.c  tnmUnixLog.c  tnmUnixPort.h  tnmUnixSnmp.c  tnmUnixSocket.c
win/: makefile  tkiWinInit.c  tnmWinIcmp.c  tnmWinInit.c  tnmWinLog.c  tnmWinPort.h  tnmWinSocket.c
(+67 files in other folders)
